--- a/index.html
+++ b/index.html
@@ -181,6 +181,28 @@
                         <p>SEO Expert</p>
                     </div>
                 </div>
+
+                <div class="card">
+                    <div class="box">
+                        <img src="profile4.jpg" alt="">
+                        <div class="text">M Faizan</div>
+                        <p>Flutter Developer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="profile5.jpg" alt="">
+                        <div class="text">Syed Uzair Shah</div>
+                        <p>React Developer</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="profile6.png" alt="">
+                        <div class="text">Chaudhary Talha</div>
+                        <p>Legal Advisor</p>
+                    </div>
+                </div>
                 
             </div>
         </div>
